fixed z-index from header and siedebar

--- a/style/nav_mobile.css
+++ b/style/nav_mobile.css
@@ -4,7 +4,9 @@
     height: 100dvh;
     position: relative;
   }
-  
+  .sidebar {
+    z-index: 2;
+  }
   .header {
     display: flex;
     justify-content: space-between;
